--- a/js/app/templates/notify_birthday.html
+++ b/js/app/templates/notify_birthday.html
@@ -1,4 +1,4 @@
-<div class="panel-notify-sub-heading">{{contacts.title}}</div>
+<div class="panel-notify-sub-heading">{{title}}</div>
 <!-- <div class="loading pull-right"><i class="fa fa-refresh fa-spin"></i></div> -->
 
  <div class="panel-notify-sub-list">
