--- a/js/app/templates/notify_newhire.html
+++ b/js/app/templates/notify_newhire.html
@@ -1,4 +1,4 @@
-<div class="panel-notify-sub-heading">{{contacts.title}}</div>
+<div class="panel-notify-sub-heading">{{title}}</div>
 <div class="panel-notify-sub-list panel-notify-sub-hire-information">
     <div class="carousel slide" data-ride="carousel">
         <!-- Bottom Carousel Indicators -->
