--- a/js/app/templates/qlink.html
+++ b/js/app/templates/qlink.html
@@ -1,6 +1,6 @@
 <div class="pull-right edit-link"><a target="_blank" href="#"><i class="fa fa-pencil "></i>  </a></div>
 <div class="panel-head">
-    <h1>{{links.title}}</h1>
+    <h1>{{title}}</h1>
 </div>
 <div class="panel-body">
      <div class="list-group linklist">
