--- a/css/app/state.css
+++ b/css/app/state.css
@@ -143,12 +143,14 @@
     /* This is how the text is flipped vertically */
     -webkit-transform: scaleY(-1);
     -moz-transform: scaleY(-1);
+    -ms-transform:scaleY(-1);
     -o-transform: scaleY(-1);
 }
 .reflected:after {
     /* Fading using CSS gradient */
     background: -webkit-gradient(linear, left top, left center, from(rgba(255,255,255,0)), to(rgb(255,255,255)));
     background: -moz-linear-gradient(top, rgba(255,255,255,0), rgb(255,255,255));
+     background: -ms-linear-gradient(top, rgba(255,255,255,0), rgb(255,255,255));
     content: ' ';
     height: .8em;
 }
