--- a/js/app/templates/campus_update.html
+++ b/js/app/templates/campus_update.html
@@ -1,11 +1,11 @@
 <div class="panel-head">
-    <h1 data-title="Campus Update" class="reflected"> Campus Update </h1>
+    <h1 data-title="Campus Update" class="reflected"> {{title}} </h1>
 </div>
 <div class="panel-body">
     <div class="row">
       <div class="col-md-6 ">
         <div class="list-group list-group-src shadow-bottom-m">
-          <div class="list-group-item title"> {{campus_src.title}}</div>
+          <div class="list-group-item title"><span class="title-icon glyphicon glyphicon-list"></span> {{subtitle_src}}</div>
           {{#each campus_src}}
           <a data-item-id={{id}} href="#campus/src/{{id}}" class="list-group-item item-{{id}}"><span class="">{{title}}</span><span class='pull-right date'>{{pubdate}}</span></a>
           {{/each}}
@@ -13,9 +13,9 @@
       </div>
       <div class="col-md-6 ">
             <div class="list-group list-group-training shadow-bottom-m">
-                <div class="list-group-item title"> {{campus_training.title}}</div>
+                <div class="list-group-item title"><span class="title-icon glyphicon glyphicon-list"></span> {{subtitle_training}}</div>
                 {{#each campus_training}}
-                <a href="#campus/trainings/{{id}}" class="list-group-item item-{{id}}"><span class="">{{title}}</span><span class='pull-right date'>{{pubdate}}</span></a>
+                <a data-item-id={{id}}  href="#campus/trainings/{{id}}" class="list-group-item item-{{id}}"><span class="">{{title}}</span><span class='pull-right date'>{{pubdate}}</span></a>
                 {{/each}}
           </div>
       </div>
