--- a/js/app/templates/srcitem.html
+++ b/js/app/templates/srcitem.html
@@ -1,1 +1,24 @@
-<p> src item </p>
+<div class="banner">
+    <span class="label label-default">{{campus_src.category}}</span><span class="splitter"></span>
+    <span class="glyphicon glyphicon-user"></span> <b>{{campus_src.author}}</b> <span class="splitter"> | </span>
+    <span class="glyphicon glyphicon-calendar"></span> {{campus_src.pubdate}}
+    <span class="pull-right numjoined">{{campus_src.numJoined}} joined </span>
+</div>
+<div class="content row">
+   <div class="col-md-3 item-image"><img src="{{campus_src.imageUrl}}" class="img-responsive"></div>
+    <div class="col-md-9 item-content bodycontent">
+          <p>{{{campus_src.content}}}</p>
+    </div>
+</div>
+{{#if campus_src.attachments.length}}
+<div class="attachments row">
+    <span class="glyphicon glyphicon-paperclip"></span> 
+    {{#each campus_src.attachments}}
+        <span class="attach_{{@index}} item"><a target="_blank" href="{{link}}">{{title}}</a></span> <span class="splitter"></span>
+    {{/each}}
+</div>
+{{/if}}
+
+<div class="footer">
+<div class="buttons"><a target="_blank" href="{{campus_src.joinLink}}">join</a> <span class=" icon glyphicon glyphicon-circle-arrow-right"></span></div>
+</div>
