--- a/js/app/templates/survey.html
+++ b/js/app/templates/survey.html
@@ -1,21 +1,21 @@
 <div class="panel-head">
-    <h1 data-title="Campus survey" class="reflected"> Campus survey </h1>
+    <h1 data-title="{{title}}" class="reflected">{{title}} </h1>
 </div>
 <div class="panel-body">
       <div class="row">
       <div class="col-md-6 ">
         <div class="list-group list-group-survey shadow-bottom-m">
-          <div class="list-group-item title"> New Survey</div>
+          <div class="list-group-item title"><span class="title-icon glyphicon glyphicon-list"></span>{{subtitle_new}}</div>
           {{#each campus_survey-new}}
-          <a href="#campus/surveys/{{id}}" class="list-group-item item-{{id}}">{{title}}</a>
+          <a data-item-id="{{id}}" href="#campus/surveys/{{id}}" class="list-group-item item-{{id}}">{{title}}</a>
           {{/each}}
         </div>
       </div>
       <div class="col-md-6 ">
             <div class="list-group list-group-survey  shadow-bottom-m">
-                <div class="list-group-item title"> Popular Survey</div>
+                <div class="list-group-item title"><span class="title-icon glyphicon glyphicon-list"></span> {{subtitle_popular}}</div>
                 {{#each campus_survey-popular}}
-                <a href="#campus/surveys/{{id}}" class="list-group-item item-{{id}}">{{title}}</a>
+                <a data-item-id="{{id}}"  href="#campus/surveys/{{id}}" class="list-group-item item-{{id}}">{{title}}</a>
                 {{/each}}
           </div>
       </div>
