--- a/js/app/templates/main.html
+++ b/js/app/templates/main.html
@@ -18,12 +18,5 @@
 <div class="col-md-2 column-right-side">
       <section class="panel panel-default  panel-container panel-profile"></section>
       <section class="panel panel-default panel-container panel-links"></section>
-      <section class="panel-sugesstion">
-        <div class="icon pull-left">
-            <img src="images/contact-icon.png"/>
-        </div>
-        <div class="suggestion-link">
-            <a href="#feedback">Suggestion <br/>box</a>
-        </div>
-      </section>
+      <section class="panel-sugesstion"></section>
 </div>
