--- a/js/app/templates/notify_newhire.html
+++ b/js/app/templates/notify_newhire.html
@@ -16,7 +16,7 @@
             <blockquote>
               <div class="row">
                 <div class="col-sm-3 text-center avatar">
-                    <a href="#employees/{{id}}" class="profilelink">
+                    <a href="#employees/{{id}}" data-employee-id="{{id}}" class="profilelink">
                         <img class="img-circle  img-thumbnail" src="{{image}}">
                     </a>
                 </div>
