--- a/js/app/templates/modalbase.html
+++ b/js/app/templates/modalbase.html
@@ -6,10 +6,12 @@
               <span class="glyphicon glyphicon-remove-circle"  aria-hidden="true"></span>
               <span class="sr-only butClose">Close</span>
          </button>
+        {{#if title}}
         <h4 class="modal-title">{{title}}</h4>
+        {{/if}}
       </div>
       <div class="modal-body">
-        {{> itemdata}}
+        {{{itemdata}}}
       </div>
     </div><!-- /.modal-content -->
 </div><!-- /.modal-dialog -->
