--- a/css/app/layout.css
+++ b/css/app/layout.css
@@ -1,6 +1,6 @@
 body {
-     /* background: url('../../images/backpattern.jpg'); */
      background: url('../../images/mainbg.jpg');
+     overflow: hidden;
 }
 
 /*
@@ -20,7 +20,6 @@ body {
     background: -ms-linear-gradient(top, #ffffff 0%,#f2f2f2 71%,#ffffff 99%,#ffffff 99%,#cccccc 100%);
     background: linear-gradient(to bottom, #ffffff 0%,#f2f2f2 71%,#ffffff 99%,#ffffff 99%,#cccccc 100%);
     filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ffffff', endColorstr='#cccccc',GradientType=0 );
-   /* height: 60px; */ /* should be set  later*/
    min-height: inherit;
    
    -webkit-box-shadow: 0px 0px 6px #333
@@ -31,8 +30,6 @@ body {
 
 #footer{
       width: 100%;
-      /* Set the fixed height of the footer here */
-      /* height: 60px; */
       background-color: rgba(0,0,0,.4);
 }
 
@@ -51,9 +48,8 @@ body {
     padding: 20px 0px;
     overflow-x: hidden;
     overflow-y: auto; /* Scrollable contents if viewport is shorter than content. */
-    background: rgba(0, 0, 0, 0.1);
-    border-radius: 0px 0px 10px 0px;
-    box-shadow: inset -8px 0px 12px -10px #1B1B1B;
+    background: #fff;
+    box-shadow: inset -8px 0px 7px -10px #1B1B1B;
 }
 
 /*main */
@@ -72,6 +68,10 @@ body {
    -webkit-transition: all 1s;
    -o-transition: all 1s;
    transition: all 1s;
+}
+
+body.pace-done{
+  overflow: auto;
 }
 
 #header.notready {
@@ -113,29 +113,13 @@ body {
 #splash{
   position: fixed;
   top: 30%;
-  font-size: 6em;
   text-align: center;
   z-index: -999;
   width: 100%;
-  color: #5C5C5C;
-  text-shadow: 5px 9px 6px #ADADAD;
   -webkit-transition: opacity 1s;
-  -o-transition: opacity 1s;
+  -moz-transition: opacity 1s;
+  -ms-transition: opacity 1s;
   transition: opacity 1s;
   opacity: 1;
 }
 
-.pace-done #splash{
-   opacity: 0;
-}
-
-#splash .sub{
-    position: relative;
-    font-size: .6em;
-    color: #33aaff;
-    text-shadow: 7px 8px 6px #5C7383;
-}
-
-#splash.hidden{
-  opacity: 0;
-}
