--- a/js/app/templates/suggestion_modal.html
+++ b/js/app/templates/suggestion_modal.html
@@ -16,9 +16,9 @@
        </div>   
     </div>
 
-    <div class="footer">
+    <div class="footer inline">
         <div class="buttons">
-             <button type="submit" class="btn btn-primary btnsubmit">Submit</button>
+             <button type="submit" data-loading-text="Posting Suggestion ..." class="btn btn-primary btnsubmit">Submit</button>
         </div>
     </div>
 </form>
