--- a/css/app/module.css
+++ b/css/app/module.css
@@ -56,16 +56,17 @@
 
 /* pace */
 .pace .pace-progress {
-    height: 3px;
+    height: 1px;
     box-shadow: 0 2px 10px #29D, 0 0 5px #29D;
 }
 
 .pace .pace-progress-inner{
     box-shadow: 0 2px 10px #29D, 0 0 5px #29D;
-    -webkit-transform: rotate(5deg) translate(0px, -4px);
-    -ms-transform: rotate(5deg) translate(0px, -4px);
-    -o-transform: rotate(5deg) translate(0px, -4px);
-    transform: rotate(5deg) translate(0px, -4px);
+    -webkit-transform: rotate(4deg) translate(0px, -4px);
+    -ms-transform: rotate(4deg) translate(0px, -4px);
+    -o-transform: rotate(4deg) translate(0px, -4px);
+    transform: rotate(4deg) translate(0px, -4px);
+    height: 2px;
 }
 
 
@@ -733,7 +734,7 @@ a.profilelink:hover img{
 .panel-links .list-group-item{
     background: transparent;
     border-bottom:1px solid #ddd !important;
-    box-shadow: 0px 5px 10px -9px #333;
+    /* box-shadow: 0px 5px 10px -9px #333; */
     border-radius: 0px;
 }
 
@@ -777,6 +778,9 @@ a.profilelink:hover img{
 
 /*modal dialog */
 .modal {overflow-y: hidden;}
+.modal-backdrop.in {
+    opacity: .7;
+}
 .modal .modal-content {top:100px;}
 .modal .modal-content .noty_inline_layout_container {
     position: absolute;
