--- a/js/app/templates/campus_update.html
+++ b/js/app/templates/campus_update.html
@@ -1,5 +1,5 @@
 <div class="panel-head">
-    <h1 data-title="Campus Update" class="reflected"> {{title}} </h1>
+    <h1 data-title="Campus Update"> {{title}} </h1>
 </div>
 <div class="panel-body">
     <div class="row">
