--- a/js/app/templates/news.html
+++ b/js/app/templates/news.html
@@ -1,6 +1,6 @@
 <div class="pull-right edit-link"><a target="_blank" href="#"><i class="fa fa-pencil fa-fw"></i> </a></div>
 <div class="panel-head">
-    <h1 data-title="{{title}}" class="reflected">{{title}} </h1>
+    <h1 data-title="{{title}}">{{title}} </h1>
 </div>
 <div class="panel-body">
    <div class="row">
