--- a/js/app/templates/survey.html
+++ b/js/app/templates/survey.html
@@ -1,5 +1,5 @@
 <div class="panel-head">
-    <h1 data-title="{{title}}" class="reflected">{{title}} </h1>
+    <h1 data-title="{{title}}">{{title}} </h1>
 </div>
 <div class="panel-body">
       <div class="row">
