--- a/css/app/module.css
+++ b/css/app/module.css
@@ -300,8 +300,8 @@ sidebar nav list
 
 #sidebar .nav-list ul ul li a:hover {
     /* background-color: #4C4F53; */
-    color: #fff
-}
+   /* color: #fff
+*/}
 
 #sidebar .nav-list ul ul ul li a {
     padding-left: 90px
