--- a/css/app/layout.css
+++ b/css/app/layout.css
@@ -2,6 +2,7 @@ body {
      /*background: url('../../images/mainbg.jpg');*/
      background: #F1F1F1;
      overflow: hidden;
+     overflow-x: hidden;
 }
 
 /*
@@ -75,24 +76,29 @@ body {
 }
 
 body.pace-done{
-  overflow: auto;
+  overflow-y: auto;
 }
 
 #header.notready {
    top:-70px;
+   -webkit-transform: translate3D(0,-100%,0);
+   -ms-transform: translate3D(0,-100%,0);
+   -o-transform: translate3D(0,-100%,0);
+   transform: translate3D(0,-100%,0);
 }
 
 #header.ready{
-    top:0px;
     height: 60px; 
 }
 
 #main.notready{
-  right: -1999px;
+  -webkit-transform: translate3D(100%,0,0);
+   -ms-transform: translate3D(100%,0,0);
+   -o-transform: translate3D(100%,0,0);
+   transform: translate3D(100%,0,0);
 }
 
 #main.ready{
-   right: 0px;
 }
 
 #footer.notready {
@@ -106,11 +112,13 @@ body.pace-done{
 
 
 #sidebar.notready{
-  left:-250px;
+ -webkit-transform: translate3D(-100%,0,0);
+   -ms-transform: translate3D(-100%,0,0);
+   -o-transform: translate3D(-100%,0,0);
+   transform: translate3D(-100%,0,0);
 }
 
 #sidebar.ready{
-  left:0px;
 }
 
 /* splash */
