--- a/js/app/templates/profile/layout.html
+++ b/js/app/templates/profile/layout.html
@@ -1,1 +1,6 @@
-<div>profile</div>
+<div class="panel panel-emprofile">
+    <div class="panel-head"><h1>Employee Profile</h1></div>
+    <div class="panel-body">
+        
+    </div>
+</div>
