--- a/css/app/module.css
+++ b/css/app/module.css
@@ -497,7 +497,7 @@ sidebar nav list
 
 
 #main   .panel-head h1{
-    font-size:2.4em;
+    font-size:2.0em;
     color:#000;
     padding: 10px 10px;
     margin-bottom:0px;
@@ -876,31 +876,64 @@ a.profilelink:hover img{
     border-bottom: 0;
 }
 
-.contact_modal .image img{
+.contact_modal  .modal-dialog {
+    width:800px;
+}
+
+.contact_modal_body .image{
+    text-align: center;
+}
+.contact_modal_body .image img{
     width: 120px;
 }
 
-.contact_modal .name{
+.contact_modal_body .name{
     font-weight: 700;
     color: #aaa;
     font-size:2em;
 }
 
-.contact_modal .chinese{
+.contact_modal_body .chinese{
     font-size: 1.5em;
     font-weight: bolder;
 }
 
-.contact_modal  .below {
+.contact_modal_body  .below {
     margin-top: 20px
 }
 
-.contact_modal  .below dt {
+.contact_modal_body  .below dt {
     width: auto;
 }
 
-.contact_modal  .below  dd{
+.contact_modal_body  .below  dd{
     margin-left: 100px;
+}
+
+.contact_modal_body  .relation .items {
+    
+}
+
+.contact_modal_body  .relation .items li img{
+    width: 60px;
+    height: 60px;
+    margin-bottom: 10px;
+}
+
+.contact_modal_body  .relation .title {
+    margin-bottom: 20px;
+    font-weight: bolder;
+    display: inline-block;
+    padding: 3px 8px;
+    font-size: 1em
+}
+
+.contact_modal_body  .reportee{
+    margin-bottom: 10%
+}
+
+.contact_modal_body   .userdata {
+    margin-top: 5%
 }
 
 /* suggestion box */
@@ -945,4 +978,27 @@ a.profilelink:hover img{
     position: absolute;
     right: 20px;
     bottom: 10px;
+}
+
+/*profile page : data panel */
+#main .panel-emprofile {
+     background: #ffffff;
+    background: -moz-linear-gradient(left,  #ffffff 0%, #f7f7f7 40%, #dbdbdb 43%, #ffffff 100%);
+    background: -webkit-gradient(linear, left top, right top, color-stop(0%,#ffffff), color-stop(40%,#f7f7f7), color-stop(43%,#dbdbdb), color-stop(100%,#ffffff));
+    background: -webkit-linear-gradient(left,  #ffffff 0%,#f7f7f7 40%,#dbdbdb 43%,#ffffff 100%);
+    background: -o-linear-gradient(left,  #ffffff 0%,#f7f7f7 40%,#dbdbdb 43%,#ffffff 100%);
+    background: -ms-linear-gradient(left,  #ffffff 0%,#f7f7f7 40%,#dbdbdb 43%,#ffffff 100%);
+    background: linear-gradient(to right,  #ffffff 0%,#f7f7f7 40%,#dbdbdb 43%,#ffffff 100%);
+    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ffffff', endColorstr='#ffffff',GradientType=1 );
+}
+.panel-emprofile  .panel-body {
+    padding: 0;
+    padding-top: 20px;
+    padding-bottom: 30px;
+}
+
+
+.panel-emprofile .reporters,
+.panel-emprofile  .reportee {
+    width: 80%;
 }
