--- a/js/app/templates/partials/empitem.html
+++ b/js/app/templates/partials/empitem.html
@@ -1,12 +1,14 @@
 <div class="col-md-6 userdata">
     <div class="col-md-5 image">
-        <img src="{{contacts.image}}" class="img-circle img-thumbnail">
+        <img src="{{contacts.photo}}" class="img-circle img-thumbnail">
     </div>
     <div class="col-md-7 info">
         <p class="name">{{contacts.name}}</p>
-        <p class="chinese">{{contacts.chineseName}}</p>
+        <p class="chinese">{{contacts.chinesename}}</p>
         <p class="title">{{contacts.title}}</p>
         <dl class="below dl-horizontal">
+            <dt>project</dt>
+            <dd>{{contacts.project}}</dd>
             <dt>team</dt>
             <dd>{{contacts.team}}</dd>
             <dt>manager</dt>
