--- a/js/app/templates/profile/layout.html
+++ b/js/app/templates/profile/layout.html
@@ -1,8 +1,8 @@
-<div class="panel panel-emprofile">
+<section class="panel panel-emprofile">
     <div class="panel-head"><h1>Employee Profile</h1></div>
-    <div class="panel-body">
-    </div>
-</div>
-<div class="panel panel-simple panel-training">
-	
-</div>
+    <div class="panel-body"></div>
+</section>
+<section class="panel panel-list panel-training">
+    <div class="panel-head"><h1>Employee Profile</h1></div>
+    <div class="panel-body"></div>
+</section>
