--- a/css/app/module.css
+++ b/css/app/module.css
@@ -570,24 +570,44 @@ sidebar nav list
 }
 
  .panel-notify-sub-list {
-     margin-top: 20px;
+     padding-top: 40px;
      text-align: center;
  }
 
- .panel-notify-sub-list  a {
-     margin-right: 3%;
- }
+.panel-notify-sub-list  .controls {
+    position: absolute;
+    right: 10px;
+    top: 5px;
+    font-size: 10px;
+}
+
+.panel-notify-sub-list  .controls .carousel-control{
+    position: relative;
+    font-size: 10px;
+    margin: 0;
+    padding: 3px 15px 3px 8px;
+}
+
 
 a.profilelink.highlight img,
 a.profilelink:hover img{
     border-color: #6EE2FF;
     box-shadow: 0px 0px 14px #6EE2FF !important;
 }
-.panel-notify-birthday .panel-notify-sub-list  a.profilelink img{
+.panel-notify-birthday   a.profilelink img{
     box-shadow: 0px 0px 6px #ccc;
-    width: 25%;
-    height: 25%;
 }
+
+.panel-notify-birthday  .carousel-indicators {
+    bottom: 0;
+    position: relative;
+    right: 0;
+    margin: 20px -40px -10px;
+    padding: 0;
+    text-align: right;
+}
+
+
 .panel-notify-sub .panel-body{
     padding:0px 10px 20px;
 }
@@ -662,19 +682,19 @@ a.profilelink:hover img{
     left:auto;
 }
 
-.panel-notify-sub-hire-information .carousel .carousel-indicators li{
+.panel-notify-sub-list .carousel .carousel-indicators li{
     background: #999;
     box-shadow: 1px 2px 6px #666;
     padding: 4px;
 }
 
-.panel-notify-sub-hire-information .carousel .carousel-indicators li.active{
+.panel-notify-sub-list .carousel .carousel-indicators li.active{
     background: #000;
     width: 13px;
     height: 13px;
 }
 
-.panel-notify-sub-hire-information .carousel .carousel-indicators li:hover{
+.panel-notify-sub-list .carousel .carousel-indicators li:hover{
     background: #333;
 }
 
