--- a/css/app/module.css
+++ b/css/app/module.css
@@ -948,6 +948,7 @@ a.profilelink:hover img{
 .contact_modal_body .chinese{
     font-size: 1.5em;
     font-weight: bolder;
+    margin-left: 10%
 }
 
 .contact_modal_body  .below {
