--- a/js/app/templates/home/profile.html
+++ b/js/app/templates/home/profile.html
@@ -1,9 +1,9 @@
 <div class="profile-avatar">
-    <a href="#/profile" class="profilelink"><img src="{{user.image}}" class="img-circle img-thumbnail"/></a>
-    <div class="profile-name"> {{user.name}}</div>
-    <div class="site-role label label-primary"> {{user.role}} </div>
+    <a href="#/profile" class="profilelink"><img src="{{user.info.image}}" class="img-circle img-thumbnail"/></a>
+    <div class="profile-name"> {{user.info.name}}</div>
+    <div class="site-role label label-primary"> {{user.role.role}} </div>
 </div>
 <ul class="profile-updates">
-   <li class="profile-update-item"><span class="count badge bg-color-red">{{user.events.src}}</span><span class="statement">SRC Events</span></li> 
-   <li class="profile-update-item"><span class="count badge bg-color-red">{{user.events.training}}</span><span class="statement">Trainings</span></li> 
+   <li class="profile-update-item"><span class="count badge bg-color-red">{{user.srcData.length}}</span><span class="statement">SRC Events</span></li> 
+   <li class="profile-update-item"><span class="count badge bg-color-red">{{user.trainingData.length}}</span><span class="statement">Trainings</span></li> 
 </ul>
