--- a/js/app/templates/partials/empitem.html
+++ b/js/app/templates/partials/empitem.html
@@ -5,14 +5,16 @@
     <div class="col-md-7 info">
         <p class="name">{{contacts.name}}</p>
         <p class="chinese">{{contacts.chinesename}}</p>
-        <p class="title">{{contacts.title}}</p>
+        <p class="title">
+            <a href="mailto: {{contacts.email}}" class="btn btn-default btn-link btn-xs"><span class="glyphicon glyphicon-envelope"></span> {{contacts.email}}</a>
+        </p>
         <dl class="below dl-horizontal">
             <dt>project</dt>
             <dd>{{contacts.project}}</dd>
-            <dt>team</dt>
-            <dd>{{contacts.team}}</dd>
             <dt>manager</dt>
             <dd>{{contacts.manager}}</dd>
+            <dt>team</dt>
+            <dd>{{contacts.team}}</dd>
             <dt>EXT number</dt>
             <dd>{{contacts.ext}}</dd>
         </dl>
