--- a/js/app/templates/profile/layout.html
+++ b/js/app/templates/profile/layout.html
@@ -3,6 +3,10 @@
     <div class="panel-body"></div>
 </section>
 <section class="panel panel-list panel-training">
-    <div class="panel-head"><h1>Employee Profile</h1></div>
+    <div class="panel-head"><h1><i class="fa fa-rss"></i> My booked training sessions</h1></div>
+    <div class="panel-body"></div>
+</section>
+<section class="panel panel-list panel-src">
+    <div class="panel-head"><h1><i class="fa fa-rss"></i> My joined SRC Events</h1></div>
     <div class="panel-body"></div>
 </section>
