--- a/css/app/base.css
+++ b/css/app/base.css
@@ -1,9 +1,8 @@
-/*@import url("//fonts.googleapis.com/css?family=Lato:300,400,700");*/
+@import url("//fonts.googleapis.com/css?family=Lato:300,400,700");
 
 body{
     font-size:12px;
     font-family: "Lato","Helvetica Neue",Helvetica,Arial,sans-serif !important;
-    /* font-family: "Segoe UI Light","Segoe UI","Segoe",Tahoma,Helvetica,Arial,sans-serif !important; */
 }
 
 h1,h2,h3,h4, h5,h6 {
