--- a/css/app/layout.css
+++ b/css/app/layout.css
@@ -28,6 +28,7 @@ body {
     -moz-box-shadow:    0px 0px 6px #333;
     box-shadow:         0px 0px 6px #333;
     margin-bottom:0px;
+    height: 70px; 
 }
 
 #footer{
@@ -71,6 +72,7 @@ body {
 /*transition state */
 #header, #footer, #sidebar, #main {
    -webkit-transition: all 1s;
+   -moz-transition: all 1s;
    -o-transition: all 1s;
    transition: all 1s;
 }
@@ -80,15 +82,16 @@ body.pace-done{
 }
 
 #header.notready {
-   top:-70px;
    -webkit-transform: translate3D(0,-100%,0);
+   -moz-transform:translate3D(0,-100%,0);
    -ms-transform: translate3D(0,-100%,0);
    -o-transform: translate3D(0,-100%,0);
    transform: translate3D(0,-100%,0);
+
 }
 
 #header.ready{
-    height: 60px; 
+    
 }
 
 #main.notready{
