--- a/css/app/module.css
+++ b/css/app/module.css
@@ -153,7 +153,7 @@ sidebar nav list
 }
 
 #sidebar .nav-list li a:focus {
-    color: #c9c9c9
+    color: #474747;
 }
 
 #sidebar .nav-list li a:hover {
@@ -326,12 +326,12 @@ sidebar nav list
 /*
 *  module css
 */
-#main .container{
+.container{
     width: auto;
     padding: 0;
 }
-#main .container.in,
-#main .container.out{
+.container.in,
+.container.out{
     -webkit-transition: all 1s;
     -ms-transition: all 1s;
     -moz-transition: all 1s;
@@ -339,7 +339,7 @@ sidebar nav list
     transition: all 1s;
 }
 
-#main .container.in {
+.container.in {
     top:0;
     left: 100%;
     opacity: 0.5;
@@ -363,7 +363,7 @@ sidebar nav list
 }
 
 
-#main .panel {
+.panel {
     border-radius: 4px;
     border: 1px solid #eee;
     /* box-shadow: 0 0 0 1px #fafafa inset, 0 1px 4px 0px #aaa; */
@@ -374,14 +374,14 @@ sidebar nav list
     font-size: 12px;
     background: #fff;
 }
-#main .panel-container .loading {
+.panel-container .loading {
     margin:5px;
 }
-#main .panel-container .list-group{
+.panel-container .list-group{
     box-shadow: 0px 3px 5px #bbb;
 }
 
-#main .panel-container .list-group .list-group-item {
+.panel-container .list-group .list-group-item {
     border:none;
 }
 
@@ -428,34 +428,34 @@ sidebar nav list
     box-shadow: 6px 0px 8px -6px #000;
 }
 
-#main .panel-container .edit-link{
+.panel-container .edit-link{
     font-size:12px;
     position: absolute;
     right: 10px;
     top: 5px;
 }
 
-#main .panel-news .panel-body{
+.panel-news .panel-body{
     margin: auto 15px;    
 }
-#main .panel-news .panel-body-content ,
+.panel-news .panel-body-content ,
 .bodycontent{
     font-family: Arial, Helvetica, sans-serif;
 }
 
-#main .panel-news .panel-body-content .article-title{
+.panel-news .panel-body-content .article-title{
     font-weight: bolder;
 }
-#main .panel-news .panel-body-content .publisher{
+.panel-news .panel-body-content .publisher{
     color: #aaa;
     font-size: 11px;
 }
 
-#main .panel-news .panel-body  .panel-body-pic img{
+.panel-news .panel-body  .panel-body-pic img{
     /* box-shadow: 0px 0px 4px #ccc; */
     width:95%;
 }
-#main .panel-news .panel-body h3 {
+.panel-news .panel-body h3 {
     margin-top:5px;
 }
 
@@ -496,7 +496,7 @@ sidebar nav list
 /* carousel end */
 
 
-#main   .panel-head h1{
+  .panel-head h1{
     font-size:2.0em;
     color:#000;
     padding: 10px 10px;
@@ -507,7 +507,7 @@ sidebar nav list
     margin-top: 10px;
 }
 
-#main   .panel-head h1.reflected:before{
+  .panel-head h1.reflected:before{
     padding-left:10px;
 }
 
@@ -517,22 +517,22 @@ sidebar nav list
 }
 
 
-#main .panel-head {
+.panel-head {
      margin-bottom:10px;
 }
 
-#main .panel-container .list-group {
+.panel-container .list-group {
     box-shadow: 0px 0px 5px #ddd
 }
 
-#main .panel-container .list-group .title{
+.panel-container .list-group .title{
     color:#0D3149;
     font-weight: bold;
   
     box-shadow: inset  0px -5px 11px -9px #000;
 }
 
-#main .panel-container .list-group .title-icon {
+.panel-container .list-group .title-icon {
     padding-right: 5px;
 }
 
@@ -540,7 +540,7 @@ sidebar nav list
      padding-top:10px;
  }
 
-#main  .row > div {
+ .row > div {
      z-index: 0;
  }
 
@@ -732,11 +732,11 @@ a.profilelink:hover img{
 
 
 /*right side */
-#main .column-right-side   .panel-container {
+.column-right-side   .panel-container {
       position: relative;
 }
 
-#main .column-right-side  .panel-head h1 {
+.column-right-side  .panel-head h1 {
     font-size:1.2em;
     display: block;
     margin-left:0px;
@@ -745,7 +745,7 @@ a.profilelink:hover img{
 
 }
 
-#main .column-right-side .panel-head {
+.column-right-side .panel-head {
     margin:auto 0px 0px;
     padding-left: 0px;
     padding-bottom: 10px;
@@ -813,7 +813,7 @@ a.profilelink:hover img{
     margin-bottom: 0px;
 }
 
-#main .panel-links .list-group {
+.panel-links .list-group {
     box-shadow: none;
 }
 
@@ -1047,7 +1047,7 @@ a.profilelink:hover img{
 /*profile page : data panel */
 
 .empitem_modal  .modal-content,
-#main .panel-emprofile {
+.panel-emprofile {
       background: #ffffff;
          background: -moz-linear-gradient(left,  #ffffff 0%, #f7f7f7 44%, #dbdbdb 47%, #ffffff 100%);
          background: -webkit-gradient(linear, left top, right top, color-stop(0%,#ffffff), color-stop(44%,#f7f7f7), color-stop(47%,#dbdbdb), color-stop(100%,#ffffff));
@@ -1067,4 +1067,22 @@ a.profilelink:hover img{
 .panel-emprofile .reporters,
 .panel-emprofile  .reportee {
     width: 80%;
+    margin-left: 10%
+}
+
+.profilepage .panel-list{
+    /* border: 1px solid #D1D1D1; */
+}
+
+.profilepage .panel-list .panel-head{
+    border-bottom: 1px solid #eee;
+    margin: 0 20px;
+}
+
+.profilepage .panel-list .panel-head h1{
+    font-family: "Lato","Helvetica Neue",Helvetica,Arial,sans-serif;
+    font-size:1.2em;
+    padding-left: 0;
+    padding-bottom: 5px;
+    margin-left: 0;
 }
