--- a/js/app/templates/profile/layout.html
+++ b/js/app/templates/profile/layout.html
@@ -3,10 +3,15 @@
     <div class="panel-body"></div>
 </section>
 <section class="panel panel-list panel-training">
-    <div class="panel-head"><h1><i class="fa fa-rss"></i> My booked training sessions</h1></div>
-    <div class="panel-body"></div>
+    <div class="panel-head">
+    	<h1><i class="fa fa-rss"></i> My booked training sessions</h1>
+    	<div class="panel-head-right"><a href="#/campus/trainings">view all of the training sessions<a/></div>
+    </div>
+    <div class="panel-body panel-training-list"></div>
 </section>
 <section class="panel panel-list panel-src">
-    <div class="panel-head"><h1><i class="fa fa-rss"></i> My joined SRC Events</h1></div>
+    <div class="panel-head"><h1><i class="fa fa-rss"></i> My joined SRC Events</h1>
+    <div class="panel-head-right"><a href="#/campus/src">view all of the SRC Events<a/></div>
+    </div>
     <div class="panel-body"></div>
 </section>
