--- a/css/app/layout.css
+++ b/css/app/layout.css
@@ -28,7 +28,6 @@ body {
     -moz-box-shadow:    0px 0px 6px #333;
     box-shadow:         0px 0px 6px #333;
     margin-bottom:0px;
-    height: 70px; 
 }
 
 #footer{
@@ -87,11 +86,12 @@ body.pace-done{
    -ms-transform: translate3D(0,-100%,0);
    -o-transform: translate3D(0,-100%,0);
    transform: translate3D(0,-100%,0);
+   height: 60px;
 
 }
 
 #header.ready{
-    
+    height: 70px
 }
 
 #main.notready{
