--- a/js/app/templates/general/modalbase.html
+++ b/js/app/templates/general/modalbase.html
@@ -1,5 +1,5 @@
 <div class="modal-dialog">
-    <div class="modal-content">
+    <div class="modal-content {{contentClass}}">
       <div class="modal-header">
         <button type="button" class="close" data-dismiss="modal">
               <!-- <span aria-hidden="true">&times;</span> -->
