--- a/css/app/module.css
+++ b/css/app/module.css
@@ -889,6 +889,26 @@ a.profilelink:hover img{
 .campus-item .banner {
     border-bottom: 1px solid #ddd;
     padding: 10px 15px;
+    position: relative;
+}
+
+.campus-item .banner-right{
+    position: absolute;
+    right: 10px;
+    bottom: 5px;
+}
+
+.campus-item .banner .numjoined {
+    color: red;
+    font-weight: bolder;
+    font-size: 1.5em;
+    top: .1em;
+    position: relative;
+    font-style: italic;
+}
+
+.campus-item .btnJoin{
+    margin-left: 10px;
 }
 
 .campus-item .splitter {
@@ -900,14 +920,13 @@ a.profilelink:hover img{
 }
 
 .campus-item .attachments{
-    padding: 10px 20px;
-    margin: 0px -5px;
-    border-radius: .5em;
-    margin-bottom: 20px;
+    padding: 15px 20px 8px;
+    border-radius: 0 0 .5em .5em;
     background: #ddd;
-    -webkit-box-shadow: 0px 2px 9px -4px #000;
-    -ms-box-shadow:0px 2px 9px -4px #000;
-    box-shadow: 0px 2px 9px -4px #000;
+    -webkit-box-shadow: 0px 6px 8px -6px #474646;
+    -moz-box-shadow: 0px 6px 8px -6px #474646;
+    -ms-box-shadow:0px 6px 8px -6px #474646;
+    box-shadow: 0px 6px 8px -6px #474646;
 }
 
 .campus-item .attachments .item{
@@ -1118,7 +1137,6 @@ a.profilelink:hover img{
 
 .panel-src-list .campus-item .footer{
     right: 10px;
-    bottom: 30px
 }
 
 .panel-src-list .campus-item .item-image img{
