--- a/js/app/templates/partials/srclist.html
+++ b/js/app/templates/partials/srclist.html
@@ -2,10 +2,13 @@
 <div class="campus-item">
 	<div class="head"><h4>{{title}}</h4></div>
 	<div class="banner">
-    <span class="label label-default">{{category}}</span><span class="splitter"></span>
-    <span class="glyphicon glyphicon-user"></span> <b>{{author}}</b> <span class="splitter"> | </span>
-    <span class="glyphicon glyphicon-calendar"></span> {{pubdate}}
-    <span class="pull-right numjoined">{{numJoined}} joined </span>
+	    <span class="label label-default">{{category}}</span><span class="splitter"></span>
+	    <span class="glyphicon glyphicon-user"></span> <b>{{author}}</b> <span class="splitter"> | </span>
+	    <span class="glyphicon glyphicon-calendar"></span> {{pubdate}}
+	    <span class="banner-right">
+	    	<span><span class="numjoined">{{numJoined}}</span></span>
+	    	<span class="btnJoin"><a href="#" class="btn btn-default btn-info btn-xs">Join <span class="glyphicon glyphicon-hand-right"></span></a></span>
+	    </span>
 	</div>
 	<div class="content row">
 	   <div class="col-md-3 item-image"><img src="{{imageUrl}}" class="img-responsive"></div>
@@ -14,16 +17,12 @@
 	    </div>
 	</div>
 	{{#if attachments.length}}
-	<div class="attachments row">
+	<div class="attachments">
 	    <span class="glyphicon glyphicon-paperclip"></span> 
 	    {{#each attachments}}
 	        <span class="attach_{{@index}} item"><a target="_blank" href="{{link}}">{{title}}</a></span> <span class="splitter"></span>
 	    {{/each}}
 	</div>
 	{{/if}}
-
-	<div class="footer">
-	    <div class="buttons"><a target="_blank" href="{{joinLink}}">join</a> <span class=" icon glyphicon glyphicon-circle-arrow-right"></span></div>
-	</div>
 </div>
 {{/each}}
